fix docs swagger login, fix cookie token
